--- a/Week 4/Day 2/Building_RAG_with_LlamaIndex_Assignment_Version.ipynb
+++ b/Week 4/Day 2/Building_RAG_with_LlamaIndex_Assignment_Version.ipynb
@@ -743,7 +743,7 @@
         "Provide a screenshot of your index version history as shown in WandB.\n",
         "\n",
         "You can find your screenshot by doing the following:\n",
-        "![alt text](https://imgur.com/a/JyPMQ0k)"
+        "![image](https://i.imgur.com/anrwPCp.png)"
       ]
     },
     {
